Fixes to make the page compact & properly align.     * Reduce the margins.     * Reduce width of grid layout.     * Remove margin from side panel.     * Fix title alignment for adding logo.

--- a/doony.css
+++ b/doony.css
@@ -619,10 +619,27 @@ textarea {
 }
 
 /******************* side panel styles ***********************/
+.fixedGridLayout #main-panel {
+  margin-left: 300px;
+  margin-right: 5px;
+}
+
+#side-panel-content, #main-panel-content {
+  margin: 5px !important;
+}
+
+.fixedGridLayout #side-panel {
+  width: 300px;
+  padding-left: 5px;
+}
+
+#side-panel-content .task {
+  margin-bottom: 0px;
+}
+
 #tasks {
-  margin-top: 5px;
-  font-size: 13px;
-  margin-right: 30px;
+  margin: 5px;
+  font-size: 12px;
   padding-left: 0;
 }
 
@@ -744,7 +761,7 @@ a.yuimenulabel, a.yuimenuitemlabel,
 
 #doony-title {
   color: #fff;
-  margin: 5px 10px;
+  margin: 0px 10px;
 }
 
 #doony-logo {
